Fixed login button on mobile devices

--- a/assets/css/_games.styl
+++ b/assets/css/_games.styl
@@ -2,7 +2,7 @@
   padding 10rem
 
   +below(800px)
-    padding 2rem
+    padding 5.5rem 2rem 2rem
 
   .article
     margin-bottom 20px
