--- a/assets/css/_post.styl
+++ b/assets/css/_post.styl
@@ -3,7 +3,7 @@
   font-size 1.5rem
 
   +below(800px)
-    padding 2rem
+    padding 5.5rem 2rem 2rem
 
   span
     display block
